<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LibraryActivity">

    <item android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always"
        android:title="Open Menu">

      <menu>
    <!-- Search / will display always -->
          <item android:id="@+id/action_search"
              android:icon="@drawable/ic_public_black_24dp"
              android:title="@string/action_search"
              app:showAsAction="ifRoom"/>

    <!-- Create -->
          <item android:id="@+id/action_create_folder"
              android:icon="@drawable/ic_folder_open_black_24dp"
              android:title="@string/action_create_folder"
              app:showAsAction="ifRoom"/>

    <!-- Settings -->
          <item android:id="@+id/action_settings"
              android:icon="@drawable/ic_settings_applications_black_24dp"
              android:title="@string/action_settings"
              app:showAsAction="never" />

    <!-- Encrypt -->
          <item android:id="@+id/action_encrypt"
                android:title="@string/action_encrypt"
                android:enabled="false"
                app:showAsAction="never" />

    <!-- Decrypt -->
          <item android:id="@+id/action_decrypt"
                android:title="@string/action_decrypt"
                android:enabled="false"
                app:showAsAction="never" />
      </menu>
    </item>
    <item
    android:id="@+id/help_button"
    app:showAsAction="always"
    android:icon="@drawable/ic_info_outline_black_24dp"
    android:title="Help"/>
</menu>