<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">


    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always"
        android:title="@string/activity_settings">

        <menu>
            <!-- Home / will display always -->
            <item android:id="@+id/home"
                android:title="@string/activity_home"
                app:showAsAction="ifRoom" />

            <!--Library / will display always -->
            <item android:id="@+id/library"
                android:title="@string/activity_library"
                app:showAsAction="ifRoom"/>
            
        </menu>
    </item>
</menu>